mbg-prism/home-to-album-redirect.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: home-to-album-redirectregex
spec:
  redirectRegex:
    regex: ^(https://|http://)?foto.scoutingmbg.nl/?$
    replacement: https://foto.scoutingmbg.nl/library/albums
