mbg-prism/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
      containers:
        - args:
            - --innodb-buffer-pool-size=512M
            - --transaction-isolation=READ-COMMITTED
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max-connections=512
            - --innodb-rollback-on-timeout=OFF
            - --innodb-lock-wait-timeout=120
          image: mariadb:11
          name: mariadb
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-claim1
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      volumes:
        - name: mariadb-claim1
          persistentVolumeClaim:
            claimName: mariadb-claim1
status: {}
