mbg-prism/photoprism-deployment-upload.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mbg-photoprism-upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mbg-photoprism-upload
  serviceName: "mbg-photoprism-upload-svc"
  template:
    metadata:
      labels:
        app: mbg-photoprism-upload
    spec:
      containers:
        - env:
            - name: PHOTOPRISM_ADMIN_PASSWORD 
              valueFrom: 
                secretKeyRef: 
                  name: mbg-photoprism-upload2
                  key: PHOTOPRISM_ADMIN_PASSWORD 
            - name: PHOTOPRISM_ADMIN_USER 
              valueFrom: 
                secretKeyRef: 
                  name: mbg-photoprism-upload2
                  key: PHOTOPRISM_ADMIN_USER 
            - name: PHOTOPRISM_AUTH_MODE 
              value: password
            - name: PHOTOPRISM_DATABASE_DRIVER
              value: mysql
            - name: PHOTOPRISM_DATABASE_NAME
              value: photoprism
            - name: PHOTOPRISM_DATABASE_PASSWORD 
              valueFrom: 
                secretKeyRef: 
                  name: mbg-photoprism-upload2
                  key: MARIADB_PASSWORD 
            - name: PHOTOPRISM_DATABASE_SERVER
              value: mariadb:3306
            - name: PHOTOPRISM_DATABASE_USER
              value: photoprism
            - name: PHOTOPRISM_DEFAULT_TLS
              value: "false"
            - name: PHOTOPRISM_DETECT_NSFW
              value: "false"
            - name: PHOTOPRISM_DISABLE_CHOWN
              value: "false"
            - name: PHOTOPRISM_DISABLE_CLASSIFICATION
              value: "false"
            - name: PHOTOPRISM_DISABLE_FACES
              value: "false"
            - name: PHOTOPRISM_DISABLE_RAW
              value: "false"
            - name: PHOTOPRISM_DISABLE_SETTINGS
              value: "false"
            - name: PHOTOPRISM_DISABLE_TENSORFLOW
              value: "false"
            - name: PHOTOPRISM_DISABLE_TLS
              value: "true"
            - name: PHOTOPRISM_DISABLE_VECTORS
              value: "false"
            - name: PHOTOPRISM_DISABLE_WEBDAV
              value: "false"
            - name: PHOTOPRISM_EXPERIMENTAL
              value: "false"
            - name: PHOTOPRISM_HTTP_COMPRESSION
              value: gzip
            - name: PHOTOPRISM_JPEG_QUALITY
              value: "85"
            - name: PHOTOPRISM_LOG_LEVEL
              value: debug
            - name: PHOTOPRISM_ORIGINALS_LIMIT
              value: "500000"
            - name: PHOTOPRISM_RAW_PRESETS
              value: "false"
            - name: PHOTOPRISM_READONLY
              value: "false"
            - name: PHOTOPRISM_SITE_AUTHOR
              value: Scouting MBG
            - name: PHOTOPRISM_SITE_CAPTION
              value: Foto's scouting MBG
            - name: PHOTOPRISM_SITE_DESCRIPTION
              value: Foto's scouting MBG
            - name: PHOTOPRISM_SITE_URL
              value: https://foto.scoutingmbg.nl
            - name: PHOTOPRISM_UPLOAD_NSFW
              value: "true"
            - name: PHOTOPRISM_WORKERS
              value: "4"
          image: photoprism/photoprism:latest
          name: mbg-photoprism-upload
          ports:
            - containerPort: 2342
              hostPort: 2342
              protocol: TCP
              name: http
          resources:
            requests:
              memory: "1000Mi"
              # cpu: "4000m"
          volumeMounts:
            - mountPath: /photoprism/originals
              name: photoprism-claim2
            - mountPath: /photoprism/storage
              name: photoprism-claim3
            - mountPath: /photoprism/import
              name: photoprism-claim4
          workingDir: /photoprism

          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /api/v1/status
              port: http
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: Host
                value: mbgupload.hensen.io
      nodeSelector:
        rp_version: "5"
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: photoprism-claim2
          persistentVolumeClaim:
            claimName: photoprism-claim2
        - name: photoprism-claim3
          persistentVolumeClaim:
            claimName: photoprism-claim3
        - name: photoprism-claim4
          persistentVolumeClaim: 
            claimName: photoprism-claim4
