mbg-prism/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mbg-photoprism
spec:
  ports:
    - name: http
      port: 3306
      targetPort: 3306
  selector:
    app: mariadb
status:
  loadBalancer: {}
