mbg-prism/photoprism-service-upload.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbg-photoprism-upload-svc
spec:
  ports:
    - name: http
      port: 2343
      targetPort: 2343
  selector:
    app: mbg-photoprism-upload
status:
  loadBalancer: {}
