mbg-prism/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbg-photoprism-svc
spec:
  ports:
    - name: http
      port: 2342
      targetPort: 2342
  selector:
    app: mbg-photoprism
status:
  loadBalancer: {}
