mbg-prism/sol-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sol-auth-svc
spec:
  ports:
    - name: http
      port: 2343
      targetPort: 80
  selector:
    app: sol-auth
status:
  loadBalancer: {}
