mbg-prism/mbg-prism-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbg-photoprism-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: home-to-album-redirectregex
    # Use Traefik as the Ingress controller
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: mbg.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbg-photoprism-svc
            port:
              name: http
  - host: mbgupload.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbg-photoprism-upload-svc
            port:
              name: http
  - host: foto.scoutingmbg.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbg-photoprism-svc
            port:
              name: http
  - host: fotoupload.scoutingmbg.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbg-photoprism-upload-svc
            port:
              name: http
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName:  letsencrypt-production.key
      hosts:
        - mbgupload.hensen.io
        - mbg.hensen.io
        - foto.scoutingmbg.nl
