mbg-prism/mbg-prism-upload-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbg-photoprism-upload-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Use Traefik as the Ingress controller
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: mbgupload.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mbg-photoprism-upload-ingress
            port:
              name: http
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName:  letsencrypt-production.key
      hosts:
        - mbgupload.hensen.io
